ca4/public/css/demo.css
* {
    box-sizing: border-box;
  }
  
  body {
    padding-top: 70px;
    font-family: Arial, Helvetica, sans-serif;
    color: black;
  }

  p {
    padding: 10px
  }

  .yusei-magic-regular {
  font-family: "Yusei Magic", sans-serif;
  font-weight: 400;
  font-style: normal;
}

  .outgoing__message {
    color: rgb(0, 119, 255);
    background-color:  rgba(255, 255, 255, 0.85);
    border-radius: 25px;
    padding-left: 25px;
    border: 50px;
    font-size: 18px;
    font-weight: bold;
  }

  .incoming__message {
   color: rgb(89, 0, 255);
    background-color:   rgba(255, 255, 255, 0.85);
    border-radius: 25px;
    padding-left: 25px;
    border: 50px;
    font-size: 18px;
    font-weight: bold;
  }

  .message__author {
    color: rgb(7, 7, 7);
    font-weight: normal;
  }

  .time_date {
    color: black;
    font-weight: normal;
  }

  .message_form__button {
   border-radius: 10px;
  }

  .message_form__button:hover {
   filter: brightness(0.9)
  }

  button:acvive {
   transform: translateY(2px);
  }

  .message_form__input{
    border-radius: 10px;
  }

  .message_form {
   padding: 25px;
   position: absolute;
   left: 150px;
   height: 120px;
  }
  
  /* Style the side navigation */
  .sidenav {
    height: 100%;
    width: 149px;
    position: fixed;
    top: 0;
    left: 0px;
    background-color: #023152;
    overflow-x: hidden;
  }

  h4 {
    padding-top: 30px;
  }

  /*make the active user text inherit style from container*/

  .inbox__people{
      color: white;
      padding: 16px;
  }
  
  
  /* Side navigation links */
  .sidenav a {
    color: white;
    padding: 18px;
    text-decoration: none;
    display: block;
  }

  /* Change color on hover */
  .sidenav a:hover {
    background-color: #ddd;
    color: black;
  }
  
  /* Style the content */
  .content {
    margin-left: 200px;
    padding-left: 20px;
    margin-top: 45px;
  }

  .nav-ul {
  list-style-type: none;
  margin-bottom: 0px;
  padding-bottom: 0px;
  overflow: hidden;
  background-color: #023152;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
  }

  #chatnav {
    margin: 0px;
    padding: 0px;
  }

  #chatnavul {
    margin: 0px;
    padding: 0px;
  }

  #chat-body {
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, #00d4ff 100%);
    padding: 32px;
    margin: 0;
  }

  hr {
  
  }

  nav {
    margin: 0px;
    padding: 0px;
  }

  .nav-li {
    float: left;
  }

  .nav-a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }

  .nav-a:hover {
  background-color: #cde6f7;
  color: black;
  }

  .active {
    background-color: #0398fc;
  }

  #grid {
    margin-top: 50px;
  }

  #home-p1 {
    padding-top: 100px
  }

  #me {
    padding: 20px;
    max-width:100%;
    max-height:100%;
    border-radius: 50%;
  }

  i {
    color: #023152;
  }

  #home-img2 {
    width: 500px;
    max-width:100%;
    max-height:85%;
  }

  #home-img3 {
    width: 500px;
    max-width:100%;
    max-height:85%;
  }

  #home-img4 {
    width: 500px;
    max-width:100%;
    max-height:85%;
  }

  .abdn-map {
     padding-bottom: 50%;
     position: relative;
  }

  .abdn-map iframe {
      height: 75%;
      width: 49%;
      left: 1;
      top: 0;
      position: absolute ;
      z-index: ;
  }

  #growing-up-p {
    float: left;
    width: 48%;
  }

.frank-ruhl {
  font-family: "Frank Ruhl Libre", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

#about-title {
  text-align: center;
  font-size: 50px;
  font-weight: 100;
}

#sub-heading {
  padding: 10px;
}

.column {
  float: left;
  width: 33%;
  padding: 5px;
}

.row::after {
  content: "";
  display: table;
  clear: both;
}

#hobbies {
  margin-top: 50px;
}

.hobby {
  margin-bottom: 40px;
}

.hobby img {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto 20px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  object-fit: cover;
}

.hobby h3 {
  font-size: 24px;
  margin-bottom: 10px;
}

.hobby p {
  font-size: 16px;
  line-height: 1.5;
}

.hobby-name {
  text-align: center;
}


#papers-p {
  float:
}

#jobs-img {
  max-width: 50%;
  height: auto;
  display: block;
  margin: 0 auto 20px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  object-fit: cover;
}

